--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,22 @@
         <item>Monthly</item>
         <item>One Time</item>
     </string-array>
+
+    <string name="navigation_drawer_open">Open Navigation Drawer</string>
+    <string name="navigation_drawer_close">Close Navigation Drawer</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="category">
+        <item>General</item>
+        <item>Food &amp; Beverage</item>
+        <item>Entertainment</item>
+        <item>Education</item>
+        <item>Bills</item>
+        <item>Shopping</item>
+        <item>Transportation</item>
+    </string-array>
+
+
 </resources>
